# local-children-concerts

./: .gitignore  README.md  main.py  pyproject.toml
scraper/: __init__.py  base_scraper.py  boston_events_scraper.py  config.py  eventbrite_scraper.py  example_scraper.py  expanded_mock_scraper.py  library_events_scraper.py  mock_scraper.py  web_search_scraper.py
tests/: __init__.py  test_base_scraper.py  test_config.py
